--- a/config/sync/core-store.plugin_content_manager_configuration_content_types##api##empresa.empresa.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_content_types##api##empresa.empresa.json
@@ -62,48 +62,6 @@
           "sortable": true
         }
       },
-      "contribuinte": {
-        "edit": {
-          "label": "contribuinte",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "contribuinte",
-          "searchable": true,
-          "sortable": true
-        }
-      },
-      "cpf_cnpj": {
-        "edit": {
-          "label": "cpf_cnpj",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "cpf_cnpj",
-          "searchable": true,
-          "sortable": true
-        }
-      },
-      "ie_rg": {
-        "edit": {
-          "label": "ie_rg",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "ie_rg",
-          "searchable": true,
-          "sortable": true
-        }
-      },
       "endereco": {
         "edit": {
           "label": "endereco",
@@ -230,6 +188,370 @@
           "sortable": true
         }
       },
+      "site": {
+        "edit": {
+          "label": "site",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "site",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "pais": {
+        "edit": {
+          "label": "pais",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "pais",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "codpais": {
+        "edit": {
+          "label": "codpais",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "codpais",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "CNAE": {
+        "edit": {
+          "label": "CNAE",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "CNAE",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "porte": {
+        "edit": {
+          "label": "porte",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "porte",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "simples": {
+        "edit": {
+          "label": "simples",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "simples",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "ieStatus": {
+        "edit": {
+          "label": "ieStatus",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "ieStatus",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "status": {
+        "edit": {
+          "label": "status",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "status",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "adFrailLat": {
+        "edit": {
+          "label": "adFrailLat",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "adFrailLat",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "adFrailCab": {
+        "edit": {
+          "label": "adFrailCab",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "adFrailCab",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "adEspecialLat": {
+        "edit": {
+          "label": "adEspecialLat",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "adEspecialLat",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "adEspecialCab": {
+        "edit": {
+          "label": "adEspecialCab",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "adEspecialCab",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "latFCab": {
+        "edit": {
+          "label": "latFCab",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "latFCab",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "cabChao": {
+        "edit": {
+          "label": "cabChao",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "cabChao",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "cabTop": {
+        "edit": {
+          "label": "cabTop",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "cabTop",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "cxEco": {
+        "edit": {
+          "label": "cxEco",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "cxEco",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "cxEst": {
+        "edit": {
+          "label": "cxEst",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "cxEst",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "cxLev": {
+        "edit": {
+          "label": "cxLev",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "cxLev",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "cxRef": {
+        "edit": {
+          "label": "cxRef",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "cxRef",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "cxSupRef": {
+        "edit": {
+          "label": "cxSupRef",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "cxSupRef",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "platSMed": {
+        "edit": {
+          "label": "platSMed",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "platSMed",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "cxResi": {
+        "edit": {
+          "label": "cxResi",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "cxResi",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "engEco": {
+        "edit": {
+          "label": "engEco",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "engEco",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "engLev": {
+        "edit": {
+          "label": "engLev",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "engLev",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "engRef": {
+        "edit": {
+          "label": "engRef",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "engRef",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "engResi": {
+        "edit": {
+          "label": "engResi",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "engResi",
+          "searchable": true,
+          "sortable": true
+        }
+      },
       "email": {
         "edit": {
           "label": "email",
@@ -258,105 +580,6 @@
           "sortable": true
         }
       },
-      "informacaoContato": {
-        "edit": {
-          "label": "informacaoContato",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "informacaoContato",
-          "searchable": true,
-          "sortable": true
-        }
-      },
-      "limiteCredito": {
-        "edit": {
-          "label": "limiteCredito",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "limiteCredito",
-          "searchable": true,
-          "sortable": true
-        }
-      },
-      "paisOrigem": {
-        "edit": {
-          "label": "paisOrigem",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "paisOrigem",
-          "searchable": true,
-          "sortable": true
-        }
-      },
-      "codigo": {
-        "edit": {
-          "label": "codigo",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "codigo",
-          "searchable": true,
-          "sortable": true
-        }
-      },
-      "site": {
-        "edit": {
-          "label": "site",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "site",
-          "searchable": true,
-          "sortable": true
-        }
-      },
-      "obs": {
-        "edit": {
-          "label": "obs",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "obs",
-          "searchable": false,
-          "sortable": false
-        }
-      },
-      "modelos": {
-        "edit": {
-          "label": "modelos",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true,
-          "mainField": "nome"
-        },
-        "list": {
-          "label": "modelos",
-          "searchable": false,
-          "sortable": false
-        }
-      },
       "pessoa": {
         "edit": {
           "label": "pessoa",
@@ -368,6 +591,90 @@
         },
         "list": {
           "label": "pessoa",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "tablecalc": {
+        "edit": {
+          "label": "tablecalc",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "tablecalc",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "maxPg": {
+        "edit": {
+          "label": "maxPg",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "maxPg",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "forpg": {
+        "edit": {
+          "label": "forpg",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "forpg",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "frete": {
+        "edit": {
+          "label": "frete",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "frete",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "CNPJ": {
+        "edit": {
+          "label": "CNPJ",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "CNPJ",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "Ie": {
+        "edit": {
+          "label": "Ie",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "Ie",
           "searchable": true,
           "sortable": true
         }
@@ -408,10 +715,6 @@
         "fantasia",
         "tipoPessoa"
       ],
-      "editRelations": [
-        "modelos",
-        "pessoa"
-      ],
       "edit": [
         [
           {
@@ -429,95 +732,51 @@
             "size": 6
           },
           {
-            "name": "contribuinte",
-            "size": 4
-          }
-        ],
-        [
-          {
-            "name": "cpf_cnpj",
-            "size": 6
-          },
-          {
-            "name": "ie_rg",
-            "size": 6
-          }
-        ],
-        [
-          {
             "name": "endereco",
             "size": 6
-          },
+          }
+        ],
+        [
           {
             "name": "numero",
             "size": 6
-          }
-        ],
-        [
+          },
           {
             "name": "complemento",
             "size": 6
-          },
+          }
+        ],
+        [
           {
             "name": "bairro",
             "size": 6
-          }
-        ],
-        [
+          },
           {
             "name": "cep",
             "size": 6
-          },
+          }
+        ],
+        [
           {
             "name": "cidade",
             "size": 6
-          }
-        ],
-        [
+          },
           {
             "name": "uf",
             "size": 6
-          },
+          }
+        ],
+        [
           {
             "name": "fone",
-            "size": 6
-          }
-        ],
-        [
-          {
-            "name": "celular",
-            "size": 6
-          },
-          {
-            "name": "email",
-            "size": 6
-          }
-        ],
-        [
-          {
-            "name": "emailNfe",
-            "size": 6
-          },
-          {
-            "name": "informacaoContato",
-            "size": 6
-          }
-        ],
-        [
-          {
-            "name": "limiteCredito",
             "size": 4
           },
           {
-            "name": "paisOrigem",
-            "size": 6
+            "name": "celular",
+            "size": 4
           }
         ],
         [
-          {
-            "name": "codigo",
-            "size": 6
-          },
           {
             "name": "site",
             "size": 6
@@ -525,10 +784,167 @@
         ],
         [
           {
-            "name": "obs",
-            "size": 12
+            "name": "Ie",
+            "size": 4
+          },
+          {
+            "name": "pais",
+            "size": 6
+          }
+        ],
+        [
+          {
+            "name": "codpais",
+            "size": 4
+          },
+          {
+            "name": "CNAE",
+            "size": 4
+          }
+        ],
+        [
+          {
+            "name": "porte",
+            "size": 6
+          },
+          {
+            "name": "simples",
+            "size": 4
+          }
+        ],
+        [
+          {
+            "name": "ieStatus",
+            "size": 4
+          },
+          {
+            "name": "status",
+            "size": 4
+          },
+          {
+            "name": "adFrailLat",
+            "size": 4
+          }
+        ],
+        [
+          {
+            "name": "adFrailCab",
+            "size": 4
+          },
+          {
+            "name": "adEspecialLat",
+            "size": 4
+          },
+          {
+            "name": "adEspecialCab",
+            "size": 4
+          }
+        ],
+        [
+          {
+            "name": "latFCab",
+            "size": 4
+          },
+          {
+            "name": "cabChao",
+            "size": 4
+          },
+          {
+            "name": "cabTop",
+            "size": 4
+          }
+        ],
+        [
+          {
+            "name": "cxEco",
+            "size": 4
+          },
+          {
+            "name": "cxEst",
+            "size": 4
+          },
+          {
+            "name": "cxLev",
+            "size": 4
+          }
+        ],
+        [
+          {
+            "name": "cxRef",
+            "size": 4
+          },
+          {
+            "name": "cxSupRef",
+            "size": 4
+          },
+          {
+            "name": "platSMed",
+            "size": 4
+          }
+        ],
+        [
+          {
+            "name": "cxResi",
+            "size": 4
+          },
+          {
+            "name": "engEco",
+            "size": 4
+          },
+          {
+            "name": "engLev",
+            "size": 4
+          }
+        ],
+        [
+          {
+            "name": "engRef",
+            "size": 4
+          },
+          {
+            "name": "engResi",
+            "size": 4
+          }
+        ],
+        [
+          {
+            "name": "email",
+            "size": 6
+          },
+          {
+            "name": "emailNfe",
+            "size": 6
+          }
+        ],
+        [
+          {
+            "name": "tablecalc",
+            "size": 6
+          },
+          {
+            "name": "maxPg",
+            "size": 6
+          }
+        ],
+        [
+          {
+            "name": "forpg",
+            "size": 6
+          },
+          {
+            "name": "frete",
+            "size": 6
+          }
+        ],
+        [
+          {
+            "name": "CNPJ",
+            "size": 6
           }
         ]
+      ],
+      "editRelations": [
+        "pessoa"
       ]
     }
   },
